gobmkida/c2/is_illegal_ko_capture
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_illegal_ko_capture/src/engine/board.c:1621:37: error: use of undeclared identifier 'byte_9B389F'
if ( 3 - color != ( unsigned __int8)byte_9B389F[pos] ) 
                                    ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_illegal_ko_capture/src/obj/1/board.o] Error 1
